# rust-web-app

./: .gitignore  README.md
backend/: Cargo.toml
backend/src/: main.rs
backend/src/model/: db.rs  mod.rs
